--- a/src/app/homePage/Header/Header.module.css
+++ b/src/app/homePage/Header/Header.module.css
@@ -16,3 +16,24 @@
     padding: 1.7rem;
     background-color: #fff;
 }
+
+.logoContainer img {
+    max-width: 100%;
+    height: auto;
+
+}
+
+@media (max-width:768px) {
+
+    .logoContainer {
+        padding: 1rem;
+        gap: 2rem;
+
+
+    }
+
+    .logoContainer img {
+        scale: 0.8;
+
+    }
+}
